podmanifest.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  labels:
    app: nginx
    env: dev
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    # STEP 2: add the volume to the container
    volumeMounts:
      - name: dc-heroes
        mountPath: /etc/nginx/heroes.txt #overwrites the existing directory, BE CAREFUL!! (use Subpath)
        subPath: heroes.txt
    resources:
      requests:
        cpu: 250m #(millicore, basically we can specify even fraction of core we require)
        memory: "65M"
      limits:
        cpu: 500m
        memory: "130M"
   # STEP 1: add the configmap as
   # a volume to this pod
  volumes:
    - name: dc-heroes
      configMap:
        name: dem-heroes
